--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,8 +12,9 @@
 $brand-color: #61dafb;
 
 .root {
-  background: #373277;
-  color: #fff;
+  background: #000;
+  color: #FFF;
+  box-shadow: 0 1px 1px 0px rgba(0,0,0,0.05);
 }
 
 .container {
