remove feedback and modify index

--- a/src/content/index.jade
+++ b/src/content/index.jade
@@ -1,9 +1,9 @@
 ---
-title: React.js Starter Kit
+title: oneProject
 component: ContentPage
 ---
 div
-  div
+  div.container
     h3 Runtime Components
     dl
       dt <a href="https://facebook.github.io/react/">React</a>
