1. add bootstrap 2. add react-bootstrap 3. import css

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -13,6 +13,10 @@
 
 @import '../variables.scss';
 
+/* Add Bootstrap*/
+// @import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+// @import '../../../node_modules/bootstrap/dist/css/bootstrap-theme.min.css';
+
 /*
  * Base styles
  * ========================================================================== */
