center of content's images

--- a/src/components/ContentWork/ContentWork.scss
+++ b/src/components/ContentWork/ContentWork.scss
@@ -88,6 +88,8 @@ $brand-color: #61dafb;
   width: 1170px;
   word-wrap: break-word;
   position: relative;
+  margin: auto;
+  align=center: initial;
 }
 
 .article {
